[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_player"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 25.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 14
script = ExtResource("1_player")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_1")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitoring = true
monitorable = true

[node name="InteractionShape" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 15)
shape = SubResource("CircleShape2D_2")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AttackShape" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_2")
position = Vector2(0, 20)

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HungerTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="ThirstTimer" type="Timer" parent="."]
wait_time = 25.0
autostart = true
